# The-Extremely-Remote-Developer

./: .gitignore
.github/workflows/: deploy.yml
svelte-game-ui/: ;  package-lock.json  package.json  svelte.config.js  vite.config.ts
svelte-game-ui/src/lib/: index.ts
svelte-game-ui/src/lib/game/: assets.ts  bot.ts  game-worker.ts  init-game.ts  tile-map.ts
svelte-game-ui/src/routes/: +layout.ts  +page.svelte  BotMenu.svelte  Editor.svelte  Game.svelte  types.ts
svelte-game-ui/src/routes/other/: HexDiv.svelte
svelte-game-ui/src/routes/test/: +page.svelte
svelte-game-ui/src/routes/test/hex/: +page.svelte
svelte-game-ui/src/routes/test/sidebar/: +page.svelte  Sidebar.svelte
svelte-game-ui/static/sprites/: Up_Bot.aseprite
wasm-game-state/: Cargo.toml
wasm-game-state/src/: lib.rs  utils.rs
wasm-game-state/src/bot_lang/: lexer.rs  mod.rs
wasm-game-state/src/bot_lang/byte_parser/: chunk.rs  common.rs  compile.rs  mod.rs  scanner.rs  util.rs  vm.rs
wasm-game-state/src/bot_lang/parsers/: decl.rs  expr.rs  mod.rs
wasm-game-state/src/game_state/: bot.rs  map.rs  mod.rs
