[package]
name = "wasm-game-state"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ariadne = "0.5.1"
cfg-if = "1.0.0"
chumsky = "0.10.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
logos = "0.15.0"
serde = "1.0.219"
tsify-next = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
